<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.etfbl.prs.dx.prs111111_z1.NewItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/insertNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/etName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/etName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="50dp"
                android:id="@+id/rgTypes">

                <RadioButton
                    android:text="@string/radioFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbFood"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/food" />

                <RadioButton
                    android:text="@string/radioDrink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbDrink"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/drink" />

                <RadioButton
                    android:text="@string/radioCloth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbCloth"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/cloth" />

                <RadioButton
                    android:text="@string/radioOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbOther"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/other" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="false"
                android:layout_centerInParent="false"
                android:layout_gravity="center"
                android:text="@string/saveItemBtnText"
                android:onClick="onAddItem" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
